# PCO-Website

./: LICENSE  Makefile  README.md  TEST_ACCOUNTS.md
pco_backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  test.db
pco_backend/.claude/: gsd-file-manifest.json
pco_backend/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
pco_backend/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
pco_backend/.planning/milestones/: v1.0-REQUIREMENTS.md
pco_backend/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
pco_backend/alembic/: env.py
pco_backend/alembic/versions/: 001_initial_schema.py
pco_backend/app/: main.py
pco_backend/app/api/: router.py
pco_backend/app/core/: config.py  deps.py  security.py
pco_backend/app/db/: base.py  session.py
pco_backend/app/models/: audit_log.py  event_pdf.py  interest_form.py  org_content.py  refresh_token.py  rush_info.py  user.py
pco_backend/app/schemas/: auth.py  content.py  event.py  interest_form.py  rush.py  user.py
pco_backend/app/services/: email_service.py  event_service.py  interest_service.py  rush_service.py  user_service.py
pco_backend/app/storage/: files.py  paths.py
pco_backend/app/tests/: conftest.py  test_auth.py  test_content.py  test_email.py  test_events.py  test_foundation.py  test_interest.py  test_members.py  (+1 more)
pco_backend/docker/: Dockerfile  docker-compose.yml
pco_backend/scripts/: dev.sh
(+150 files in other folders)
