[project]
name = "pco_backend"
version = "0.1.0"
description = "FastAPI backend for Psi Chi Omega website"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "bcrypt>=4.0",
  "python-multipart>=0.0.9",
  "alembic>=1.18.4",
  "pyjwt>=2.8",
  "aiosmtplib>=5.1.0",
  "supabase>=2.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
